dataset1235/2025-2/805158916/users/2584427029/executions/2118643220_2510511830.log
== SUBMISSION (2025-09-01 15:51:09)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano + custos_excedente
valor_final = valor_total * 1.42
print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:52:23)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano + custos_excedente

valor_final = valor_total * 1.42

print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:49:58)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano +custos_excedentes
valor_final = valor_total 1.42
print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:50:52)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano +custos_excedentes
valor_final = valor_total * 1.42
print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:49:13)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano +custos_excedentes
valor_final = valor_total 1.42
print(f"O valor da conta a pagar é: R$(valor_final:.2f")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:55:44)
-- CODE: 
minutos = int (input("Digite os minutos excedentes"))
fixo = 45
excedentes = minutos * 0.97
total = fixo + EXCEDENTES
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int (input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:51:44)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano + custos_excedente

valor_final = valor_total * 1.42

print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos_excedentes = int(input("Digite a quantidade de minutos: "))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:08:30)
-- CODE: 
minutos = int(input("Digite os minutos excedentes"))
fixo = 45
excedentes = minutos * 0.97
total = fixo + excedentes
total_com_icms = total * (42/100)
print(round(total_com_icms,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:49:58)
-- CODE: 
minutos_excedentes = int(input("Digite a quantidade de minutos: "))
plano = 45
custo_excedente = minutos_excedentes * 0.97
valor_total = plano +custos_excedentes
valor_final = valor_total 1.42
print(f"O valor da conta a pagar é: R${valor_final:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
File "XXXX", line 5
    valor_final = valor_total 1.42
                              ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:07:06)
-- CODE: 
minutos = int(input("Digite os minutos excedentes"))
fixo = 45
excedentes = minutos * 0.97
total = fixo + excedentes
total_com_icms = total * (42/100)
print(round(total_com_icms,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '95.33'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.07'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '129.35'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '278.25'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    minutos = int(input("Digite os minutos excedentes"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '84.06'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:52:22)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
None
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
None
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
None
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
None
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
None
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
